--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
         <ul>
             <li>Travelling</li>
             <li>Designing</li>
-            <li>Hiking</li>
+            <li>Swimming</li>
         </ul>
     </body>
 </html>
